# kurger

./: .gitignore  CMakeLists.txt  README.md  kurger_cli.bat  kurger_cli.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
.github/workflows/: codeql.yml
